
* Syntax of document antiquotation @{rail} now uses \<newline> instead
of "\\", to avoid the optical illusion of escaped backslash within
string token.  Minor INCOMPATIBILITY.

* Lexical syntax (inner and outer) supports text cartouches with
arbitrary nesting, and without escapes of quotes etc.  The Prover IDE
supports input methods via ` (backquote), or << and >> (double angle
brackets).

* More static checking of proof methods, which allows the system to
form a closure over the concrete syntax.  Method arguments should be
processed in the original proof context as far as possible, before
operating on the goal state.  In any case, the standard discipline for
subgoal-addressing needs to be observed: no subgoals or a subgoal
number that is out of range produces an empty result sequence, not an
exception.  Potential INCOMPATIBILITY for non-conformant tactical
proof tools.

* Command 'SML_file' reads and evaluates the given Standard ML file.
Toplevel bindings are stored within the theory context; the initial
environment is restricted to the Standard ML implementation of
Poly/ML, without the add-ons of Isabelle/ML.  See also
~~/src/Tools/SML/Examples.thy for some basic examples.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Improved syntactic and semantic completion mechanism:

  - No completion for Isar keywords that have already been recognized
    by the prover, e.g. ":" within accepted Isar syntax looses its
    meaning as abbreviation for symbol "\<in>".

  - Completion context provides information about embedded languages
    of Isabelle: keywords are only completed for outer syntax, symbols
    or antiquotations for languages that support them.  E.g. no symbol
    completion for ML source, but within ML strings, comments,
    antiquotations.

  - Support for semantic completion based on failed name space lookup.
    The error produced by the prover contains information about
    alternative names that are accessible in a particular position.