@@ -25,6 +25,10 @@ arbitrary nesting, and without escapes of quotes etc.  The Prover IDE
 supports input methods via ` (backquote), or << and >> (double angle
 brackets).
 
+* The outer syntax categories "text" (for formal comments and document
+markup commands) and "altstring" (for literal fact references) allow
+cartouches as well, in addition to the traditional mix of quotations.
+
 * More static checking of proof methods, which allows the system to
 form a closure over the concrete syntax.  Method arguments should be
 processed in the original proof context as far as possible, before
